final test complete

--- a/index.html
+++ b/index.html
@@ -269,7 +269,9 @@
       </div>
       <div class="footer-bottom">
         <div class="copyright-area container">
-          <h6>Made With Love By Figmaland All Right Reserved</h6>
+          <h6>
+            Made With Love By &copy;mithunbiswas || Right Reserved Figmaland All
+          </h6>
           <p class="icon">
             <i class="fa-brands fa-facebook"></i>&nbsp;&nbsp;&nbsp;<i
               class="fa-brands fa-instagram"
